switch back to the Bay

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
   }
 
   function loadScenarios() {
-    const initialSelection = 'la';
+    const initialSelection = 'bayArea';
     for(let key in geographies) {
       const el = document.createElement('option');
       el.textContent = geographies[key].name;
